cabal-version:      3.14

name:               whether

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.4.0.0
synopsis:           CLI for the OpenWeatherMap OneCall API
-- description:

homepage:           github.com/meshkinyar/whether

license:            MIT
license-file:       LICENSE
author:             May Meshkinyar
maintainer:         may@meshkinyar.com
category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:
      Whether.Client
      Whether.Weather
      Whether.Units
      Whether.Formatters
      Whether.Components
      Whether.Display
      Whether.OWM.Types
      Whether.OWM.Client
      Whether.Config

    other-modules:
      Whether.Frame

    if !os(windows)
      build-depends: unix >= 2.6.0.0

    build-depends:
        base
      , aeson
      , bytestring
      , casing
      , directory
      , filepath
      , formatting
      , generic-optics
      , http-conduit
      , optics
      , text
      , toml-parser
      , time
    hs-source-dirs: src
    default-language: Haskell2010

executable whether
    import:  warnings
    main-is: Main.hs

    other-modules: Options

    build-depends:
      , base ^>=4.21.0.0
      , ix
      , optparse-applicative
      , text
      , whether

    hs-source-dirs: app
    default-language: Haskell2010
